// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should render default styles 1`] = `
.c0 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #E0E0E0;
  border-radius: 9999em;
  color: #292929;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  line-height: 1.5rem;
  min-width: 1.5rem;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
/>
`;

exports[`Wrapper should render error styles when hasError prop is provided 1`] = `
.c0 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #E0E0E0;
  border-radius: 9999em;
  color: #292929;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  line-height: 1.5rem;
  min-width: 1.5rem;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
  white-space: nowrap;
}

.c0:after {
  border-radius: 9999em;
  bottom: 0;
  box-shadow: 0 0 0 2px #CB2233;
  content: '';
  display: block;
  left: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 5;
}

<div
  className="c0"
/>
`;
